# neoswarm

./: .gitignore  AGENTS.md  GETTING_STARTED.md  LICENSE  NOTICE.md  README.md  run-backend.sh  run.sh
backend/: debug.py  main.py  requirements.txt
backend/apps/agents/: agent_loop.py  agent_manager.py  agents.py  browser_agent.py  browser_agent_mcp_server.py  browser_mcp_server.py  invoke_agent_mcp_server.py  mcp_client.py  orchestrator.py
backend/apps/agents/providers/: ollama.py  registry.py
backend/apps/analytics/: analytics.py
backend/apps/health/: health.py
backend/apps/outputs/: outputs.py  view_builder_skill.md
backend/apps/settings/: credentials.py  models.py
backend/apps/tools_lib/: tools_lib.py
backend/config/: Apps.py  paths.py
backend/tests/: test_analytics.py
cli/: __init__.py  __main__.py  main.py  setup.py  tui.py
cli/neoswarm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
frontend/src/app/: Main.tsx
frontend/src/app/components/: OnboardingModal.tsx
frontend/src/app/components/Layout/: AppShell.tsx
frontend/src/app/pages/AgentChat/: ChatInput.tsx  ToolCallBubble.tsx
frontend/src/app/pages/Dashboard/: BrowserCard.tsx  Dashboard.tsx  captureDashboardThumbnail.ts
frontend/src/shared/: browserCommandHandler.ts  config.ts
frontend/src/shared/hooks/: useLastDashboardId.ts
frontend/src/shared/state/: settingsSlice.ts
frontend/src/types/: electron.d.ts
scripts/: m365-login.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  sidecar.rs
(+2 files in other folders)
