[package]
name = "neoswarm"
version = "0.1.0"
description = "NeoSwarm - AI Agent Orchestrator"
authors = ["Pratik Rai"]
license = "MIT"
repository = "https://github.com/PratikRai0101/neoswarm"
edition = "2021"

[lib]
name = "neoswarm_lib"
crate-type = ["lib", "cdylib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
